--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -614,7 +614,8 @@ It can be beneficial not using the most expressive constraint languages when add
 \subsection{Expressivity}
 
 \subsubsection{Expressivity Score}
-\tb{do you know why there cannot be a new line?}
+
+\newline 
 As we want to be able to perform reasoning before actually validating the data,
 we use the two types of constraints - \emph{constraints without reasoning} and \emph{constraints with reasoning} - as criteria to measure constraint-specific expressivity.
 Expressivity scores (on how many of those constraints can be expressed by a particular constraint language) are:
